# MantraOne

./: .env.local.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.worker  MANTRAONE_ANTIGRAVITY_BACKEND_PROMPT_v2.md  README.md  alembic.ini  fix_ruff.py  package.json  pnpm-lock.yaml  ponytail.config.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260626_add_conversations.py
api/: dependencies.py  main.py
api/middleware/: auth_middleware.py
apps/backend/: .gitignore  docker-compose.yml  fix_mypy.py  fix_mypy2.py  fix_ruff.py  mantraone_dev.db  ponytail.config.yml
apps/frontend/: package.json  pnpm-lock.yaml
config/: settings.py
core/contracts/: memory.py  storage.py
core/domain/: entities.py  enums.py
core/events/: publisher.py  subscriber.py  types.py
core/providers/: encryption_service.py  llm_provider.py  memory_provider.py  retrieval_service.py
core/repositories/: audit_repository.py  base.py  checkin_repository.py  coordinator_decision_repository.py  document_repository.py  escalation_repository.py  health_record_repository.py  member_repository.py  watcher_signal_repository.py
core/services/: audit_service.py  checkin_service.py  consultation_service.py  conversation_service.py  coordinator_service.py  document_service.py  escalation_service.py  health_record_service.py  member_service.py  narrative_service.py
core/workers/: coordinator_worker.py  event_router.py  narrative_builder.py  worker_main.py
demo/: hackathon_demo.py  sample_family.json
golden/: generate_golden_pdfs.py
golden/families/: iyer.json  sharma.json  (+1 more)
scripts/: ponytail_check.py  verify_production.py
sdk/: package.json
(+201 files in other folders)
